# flood-detectionCH

./: .gitattributes  .gitignore  main.ipynb  pyproject.toml  requirements.txt
app/: SegformerJaccardLoss.pth  backend.py  frontend.py
c11_sar_tif/: tile_1006.tif  tile_101.tif  tile_1017.tif  tile_1028.tif  tile_1029.tif  tile_103.tif  tile_1030.tif  tile_1035.tif  tile_1038.tif  tile_1040.tif  tile_1044.tif  tile_105.tif  tile_1053.tif  tile_1054.tif  tile_1059.tif  tile_1061.tif  tile_1063.tif  tile_1066.tif  tile_1068.tif  tile_1073.tif  tile_1074.tif  tile_1079.tif  tile_1080.tif  tile_1084.tif  tile_1091.tif  tile_1097.tif  tile_1098.tif  tile_1104.tif  tile_1108.tif  tile_1109.tif  tile_111.tif  tile_1110.tif  tile_1121.tif  tile_1122.tif  tile_1124.tif  tile_1127.tif  tile_113.tif  tile_1132.tif  tile_1137.tif  tile_1141.tif  (+1528 more)
c33_sar_tif/: tile_1001.tif  tile_1008.tif  tile_1009.tif  tile_1011.tif  tile_1015.tif  tile_1016.tif  tile_1025.tif  tile_1027.tif  tile_1032.tif  tile_1037.tif  tile_1039.tif  tile_104.tif  tile_1047.tif  tile_1051.tif  tile_1052.tif  tile_1055.tif  tile_1060.tif  tile_1071.tif  tile_1072.tif  tile_1075.tif  tile_1076.tif  tile_1077.tif  tile_108.tif  tile_1086.tif  tile_1099.tif  tile_110.tif  tile_1101.tif  tile_1129.tif  tile_1130.tif  tile_1131.tif  tile_1135.tif  tile_1136.tif  tile_1138.tif  tile_1140.tif  tile_1141.tif  tile_1142.tif  tile_1144.tif  tile_115.tif  tile_1155.tif  tile_1157.tif  (+1417 more)
fp2_sar_tif/: tile_1489.tif  tile_1493.tif  tile_1496.tif  tile_1498.tif  tile_1502.tif  tile_1503.tif  tile_1504.tif  tile_1506.tif  (+239 more)
(+44874 files in other folders)
